banco de dados $

--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
   "homepage": "https://github.com/bernardojachegou/rocketseat_webproject_casacriativa#readme",
   "dependencies": {
     "express": "^4.17.1",
+    "install": "^0.13.0",
     "nodemon": "^2.0.2",
-    "nunjucks": "^3.2.1"
+    "nunjucks": "^3.2.1",
+    "sqlite3": "^4.1.1"
   }
 }
